# GreenFunction

./: .gitignore  CMakeLists.txt  README.md  green_function.fbs
interfaces/: green_function_generated.h
onnx/: green_rep.cpp  green_rep_onnx.cpp  print_output_data.cpp  print_processing_time.cpp  print_speed_limit.cpp
onnx/include/: UNIPD_main_header.h
onnx/onnxruntime-osx-arm64-1.19.2/lib/cmake/onnxruntime/: onnxruntimeTargets-release.cmake
onnx/onnxruntime-osx-arm64-1.19.2/lib/libonnxruntime.1.19.2.dylib.dSYM/Contents/: Info.plist
onnx/onnxruntime-osx-arm64-1.19.2/lib/pkgconfig/: libonnxruntime.pc
onnx_models/: net.onnx  saved_model.onnx
src_green_function/: Info  codriver_offline_execute_req.cc  green_rep.cpp  green_rep_onnx.cpp
src_synchronous_green_function/: Info  codriver_offline_execute_req.cc  green_rep.cpp
zmq_fb_example/: CMakeLists.txt  README.md  example.fbs  green_function.fbs  green_function_v2.fbs
zmq_fb_example/include/: zmq_message.hpp  zmq_recv_queue.hpp
zmq_fb_example/interfaces/: codriver_interfaces_data_structs.h  example_generated.h  green_function_generated.h
zmq_fb_example/scripts/: third_party.sh
zmq_fb_example/src/: codriver.cpp  codriver_offline_execute.cc  codriver_offline_execute_old.cc  codriver_offline_execute_req.cc  green.cpp  green_old.cpp  green_rep.cpp
